--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "framer-motion": "^11.11.7",
+    "portfoliov3": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
