--- a/src/data/entities/project/projects.json
+++ b/src/data/entities/project/projects.json
@@ -1,6 +1,6 @@
 [
     {
-        "image": "authdashboard.png",
+        "image": "https://s3.us-east-2.amazonaws.com/leonardoburgosd.site/portafolio/authdashboard.png",
         "title": "Auth0rize",
         "description": "Proyecto de administración de autenticación de usuarios",
         "link": "https://auth0rize.leonardoburgosd.site",
@@ -10,7 +10,7 @@
         ]
     },
     {
-        "image": "buttonstyleportada.png",
+        "image": "https://s3.us-east-2.amazonaws.com/leonardoburgosd.site/portafolio/buttonstyleportada.png",
         "title": "ButtonStyle",
         "description": "Proyecto con HTML y CSS de estilo de botones",
         "link": "https://github.com/leonardoburgosd/button-styles",
@@ -20,7 +20,7 @@
         ]
     },
     {
-        "image": "bcCreate.png",
+        "image": "https://s3.us-east-2.amazonaws.com/leonardoburgosd.site/portafolio/bcCreate.png",
         "title": "BCreate",
         "description": "Estructura y código SQL para crear un blog",
         "link": "https://github.com/leonardoburgosd/bd-structure",
@@ -29,7 +29,7 @@
         ]
     },
     {
-        "image": "integragroup.jpg",
+        "image": "https://s3.us-east-2.amazonaws.com/leonardoburgosd.site/portafolio/integragroup.jpg",
         "title": "Integra: Login",
         "description": "Proyecto de diseño de registro y login en Photoshop",
         "link": "https://github.com/leonardoburgosd/integra-group",
@@ -38,7 +38,7 @@
         ]
     },
     {
-        "image": "akamikaProyc.png",
+        "image": "https://s3.us-east-2.amazonaws.com/leonardoburgosd.site/portafolio/akamikaProyc.png",
         "title": "Akamika",
         "description": "Platforma de educación online",
         "link": "https://www.youtube.com/watch?v=63l2ByJUAUM",
@@ -49,7 +49,7 @@
         ]
     },
     {
-        "image": "firebaseProyc.png",
+        "image": "https://s3.us-east-2.amazonaws.com/leonardoburgosd.site/portafolio/firebaseProyc.png",
         "title": "Aplicativo movil con IOT",
         "description": "Proyecto encendido de diodo led desde Xamarin con Firebase y Arduino sin ESP",
         "link": "https://www.youtube.com/watch?v=whdph6Q_oek",
